created HTML skeleton for basic content requirements

--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>My Portfolio</title>
 </head>
-<body>
 
+<body>
+    <div id="About Me">
+        <h2>About Me</h2>
+    </div>
+
+    <div id="Projects">
+        <h2>Projects</h2>
+    </div>
+
+    <div id="Contact Me">
+        <h2>Contact Me</h2>
+    </div>
 </body>
 </html>
