--- a/index.html
+++ b/index.html
@@ -1,21 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>My Portfolio</title>
+
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="script" href="js/script.js">
 </head>
 
 <body>
     <div id="About Me">
         <h2>About Me</h2>
+        <p>I am a junior software engineering student at KFUPM </p>
     </div>
 
     <div id="Projects">
         <h2>Projects</h2>
+        <p>SWE 206: Tutor Link</p>
+        <p>ICS 202: Image compression</p>
+        <p>COE 292: Classification Model</p>
     </div>
 
     <div id="Contact Me">
         <h2>Contact Me</h2>
+        <div id="contactMeForm">
+            <form action="" method="post">
+                <div id="nameField">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="firstname" placeholder="Your name..">
+                </div>
+
+                <div id="emailField">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Your email..">
+                </div>
+
+                <div id="messageField">
+                    <label for="message">Message</label>
+                    <input type="text" id="message" name="message" placeholder="Your message..">
+                </div>
+
+                <input type="submit" value="Submit">
+            </form>
+        </div>
     </div>
 </body>
 </html>
