-debugged issue where refreshing changes theme but not icon -updated README -updated AI usage report

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 class="logo">Lena Ashqar</h1>
         <nav>
             <button id="themeToggle" aria-label="Toggle theme">
-                <img src="/assets/moon.png" alt="moon">
+                <img id="darkThemeIcon" src="/assets/moon.png" alt="moon">
             </button>
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
