--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <button id="themeToggle" aria-label="Toggle theme">
                 <img id="darkThemeIcon" src="/assets/moon.png" alt="moon">
             </button>
+
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
@@ -48,25 +49,29 @@
     <section id="projects" class="container projects">
         <h3>Projects</h3>
         <div class="project-grid">
+
             <article class="project-card">
                 <img src="assets/number1.png" alt="Project 1">
                 <h4>Secure Webchat</h4>
-                <p>An authenticated web application for encrypting text messages.</p>
+                <p>An authenticated web application for encrypting text messages using ChaCha20-Poly1305.</p>
             </article>
+
             <article class="project-card">
                 <img src="assets/number2.jpg" alt="Project 2">
-                <h4>Project Two</h4>
-                <p>Short description of project two — highlight an interesting challenge.</p>
+                <h4>Tutor Link</h4>
+                <p>A tutoring program to connect tutors with fellow classmates with an e-book and resource library.</p>
             </article>
-            <article class="project-card">
-                <img src="assets/number1.png" alt="Project 1">
-                <h4>Project Three</h4>
-                <p>Short description of project one — what it does and tech used.</p>
-            </article>
+
             <article class="project-card">
                 <img src="assets/number2.svg" alt="Project 2">
                 <h4>Project Four</h4>
                 <p>Short description of project two — highlight an interesting challenge.</p>
+            </article>
+
+            <article class="project-card">
+                <img src="assets/number1.png" alt="Project 1">
+                <h4>Image Compression</h4>
+                <p>A computationally efficient image compressor that recursively divides the image in quarters.</p>
             </article>
         </div>
     </section>
