--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 
     <section id="contact" class="container-contact">
-        <h3>Contact</h3>
+        <h3>Contact Me</h3>
         <form id="contactForm" novalidate>
 
             <div class="contact-form">
