- edited docs - edited colors again

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 <footer class="site-footer">
     <div class="container">
-        <p>© <span id="year"></span> Your Name — Built with ❤️</p>
+        <p>© <span id="year"></span> Lena Ashqar</p>
     </div>
 </footer>
 
