- added a skills section with scroll animation successfully

--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
         </div>
     </section>
 
+    <section id="skills" class="container-skills">
+        <h2>Skills</h2>
+        <div class="skills-inner-container">
+            <div class="skill">
+                <img src="path/to/skill-icon.png" alt="Skill Name" />
+                <p>Skill Name</p>
+            </div>
+        </div>
+    </section>
+
 
     <section id="contact" class="container-contact">
         <h3>Contact Me</h3>
