- added a projects scroll animation successfully

--- a/index.html
+++ b/index.html
@@ -52,25 +52,25 @@
         <h3>Projects</h3>
         <div class="project-grid">
 
-            <article class="project-card animate-on-scroll">
+            <article class="project-card">
                 <img src="assets/number1.png" alt="Project 1">
                 <h4>Secure Webchat</h4>
                 <p>An authenticated web application for encrypting text messages using ChaCha20-Poly1305.</p>
             </article>
 
-            <article class="project-card animate-on-scroll">
+            <article class="project-card">
                 <img src="assets/number2.jpg" alt="Project 2">
                 <h4>Tutor Link</h4>
                 <p>A tutoring program to connect tutors with students including an e-book and resource library.</p>
             </article>
 
-            <article class="project-card animate-on-scroll">
+            <article class="project-card">
                 <img src="assets/number2.jpg" alt="Project 2">
                 <h4>Project Four</h4>
                 <p>Short description of project two — highlight an interesting challenge.</p>
             </article>
 
-            <article class="project-card animate-on-scroll">
+            <article class="project-card">
                 <img src="assets/number1.png" alt="Project 1">
                 <h4>Image Compression</h4>
                 <p>A computationally efficient image compressor that recursively divides the image in quarters.</p>
