- changed colors again - added missing project - added skills

--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
             </article>
 
             <article class="project-card">
-                <img src="assets/number2.jpg" alt="Project 2">
+                <img src="assets/number2.png" alt="Project 2">
                 <h4>Tutor Link</h4>
                 <p>A tutoring program to connect tutors with students including an e-book and resource library.</p>
             </article>
 
             <article class="project-card">
-                <img src="assets/number2.jpg" alt="Project 2">
-                <h4>Project Four</h4>
-                <p>Short description of project two — highlight an interesting challenge.</p>
+                <img src="assets/number3.png" alt="Project 2">
+                <h4>Obesity Classifiaction Model</h4>
+                <p>A classification model that can predict obesity on factors outside of height and weight or BMI.</p>
             </article>
 
             <article class="project-card">
-                <img src="assets/number1.png" alt="Project 1">
+                <img src="assets/number4.png" alt="Project 1">
                 <h4>Image Compression</h4>
                 <p>A computationally efficient image compressor that recursively divides the image in quarters.</p>
             </article>
@@ -83,8 +83,33 @@
         <h3>Skills</h3>
         <div class="skills-inner-container">
             <div class="skill">
-                <img src="path/to/skill-icon.png" alt="Skill Name" />
-                <p>Skill Name</p>
+                <img src="assets/python.png" alt="python" />
+                <p>Python</p>
+            </div>
+
+            <div class="skill">
+                <img src="assets/java.png" alt="Java" />
+                <p>Java</p>
+            </div>
+
+            <div class="skill">
+                <img src="assets/sql.png" alt="SQL" />
+                <p>SQL</p>
+            </div>
+
+            <div class="skill">
+                <img src="assets/html.png" alt="HTML" />
+                <p>HTML</p>
+            </div>
+
+            <div class="skill">
+                <img src="assets/css.png" alt="CSS" />
+                <p>CSS</p>
+            </div>
+
+            <div class="skill">
+                <img src="assets/js.png" alt="JavaScript" />
+                <p>JavaScript</p>
             </div>
         </div>
     </section>
