create react project and start converting

--- a/old/index.html
+++ b/old/index.html
@@ -13,7 +13,7 @@
         <h1 class="logo">Lena Ashqar</h1>
         <nav>
             <button id="themeToggle" aria-label="Toggle theme">
-                <img id="darkThemeIcon" src="/assets/moon.png" alt="moon">
+                <img id="darkThemeIcon" src="/old/assets/moon.png" alt="moon">
             </button>
 
             <a href="#about">About</a>
